--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
                         <input type="text" class="form-style1" autocomplete="off" />
                     </div>
                     <div class="form-item1">
-                        <p class="formLabel1">Confirm Password</p>
-                        <input type="text" class="form-style1" autocomplete="off" />
+                        <p class="formLabel1">Password</p>
+                        <input type="password" class="form-style1" autocomplete="off" />
                     </div>
                     <div class="form-item1">
-                        <p class="formLabel1">Password</p>
-                        <input type="text" class="form-style1" autocomplete="off" />
+                        <p class="formLabel1">Confirm Password</p>
+                        <input type="password" class="form-style1" autocomplete="off" />
                     </div>
 
                     <error id="alert"></error>
